--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "guid-typescript": "^1.0.9",
     "ionic-angular": "3.9.2",
     "ionic-text-avatar": "^1.1.0",
     "ionicons": "3.0.0",
-    "moment": "^2.18.1",
+    "moment": "^2.24.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
