--- a/package.json
+++ b/package.json
@@ -14,38 +14,58 @@
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
+    "@angular/compiler-cli": "^5.2.11",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/core": "^4.11.0",
+    "@ionic-native/diagnostic": "^4.20.0",
     "@ionic-native/firebase": "^5.0.0",
-    "@ionic-native/splash-screen": "~4.15.0",
-    "@ionic-native/status-bar": "~4.15.0",
+    "@ionic-native/geofence": "^4.20.0",
+    "@ionic-native/geolocation": "^4.20.0",
+    "@ionic-native/google-maps": "^5.5.0",
+    "@ionic-native/location-accuracy": "^4.20.0",
+    "@ionic-native/network": "^4.20.0",
+    "@ionic-native/splash-screen": "^4.15.0",
+    "@ionic-native/status-bar": "^4.15.0",
     "@ionic/storage": "2.2.0",
     "angular2-text-mask": "^9.0.0",
     "chart.js": "^2.7.0",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "^8.0.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
+    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-gaodelocation-chenyu": "2.0.2",
+    "cordova-plugin-geofence": "0.7.0",
+    "cordova-plugin-geolocation": "4.0.1",
+    "cordova-plugin-googlemaps": "2.6.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-network-information": "2.0.1",
+    "cordova-plugin-request-location-accuracy": "2.3.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "4.0.12",
+    "es6-promise-plugin": "4.2.2",
     "guid-typescript": "^1.0.9",
     "ionic-angular": "3.9.2",
     "ionic-text-avatar": "^1.1.0",
+    "ionic2-google-places-autocomplete": "^1.0.2",
     "ionicons": "3.0.0",
+    "leaflet": "^1.5.1",
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet-routing-machine": "^3.2.12",
     "moment": "^2.24.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/lab": "1.0.13",
     "typescript": "~2.6.2"
   },
@@ -60,7 +80,28 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "cordova-plugin-geofence": {},
+      "cordova-plugin-gaodelocation-chenyu": {
+        "ANDROID_API_KEY": "AIzaSyBNIN0oMzHoNgEZz1utnM_8ut6KFjwieoo",
+        "IOS_API_KEY": "noting"
+      },
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      },
+      "cordova-plugin-request-location-accuracy": {
+        "PLAY_SERVICES_LOCATION_VERSION": "16.+"
+      },
+      "cordova-plugin-googlemaps": {
+        "ANDROID_API_KEY": "AIzaSyBNIN0oMzHoNgEZz1utnM_8ut6KFjwieoo",
+        "IOS_API_KEY": "noting",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
